first complete installation script #1

--- a/utils/airflow_setup.ini
+++ b/utils/airflow_setup.ini
@@ -2,18 +2,20 @@ USE_PROXY=False
 DEPLOYMENT=DEV
 # Backup options
 UPGRADE=False
-BACKUP_PATH=/data/airflow/airflow_2_2_5_backup
-OLD_AIRFLOW_VENV=/data/airflow/airflow_venv_old_ec2
-OLD_AIRFLOW_HOME=/data/airflow/airflow_venv_old_ec2/airflow
-OLD_ENV_FILE=/data/airflow/airflow_venv_old_ec2/airflow/airflow.env
+BACKUP_PATH=~/airflow_backup
+OLD_AIRFLOW_VENV=~/venvs/airflow_2_7_0
+OLD_AIRFLOW_HOME=~/venvs/airflow_2_7_0/airflow
+OLD_ENV_FILE=~/venvs/airflow_2_7_0/airflow/airflow.env
 OLD_PG_DATABASE=airflow
 # Airflow parameters
-AIRFLOW_VENV=/data/airflow/airflow_venv
-AIRFLOW_HOME=/data/airflow/airflow_venv/airflow
-ENV_FILE=/data/airflow/airflow_venv/airflow/airflow.env
-DAGS_FOLDER=/etc/airflow/dags
-AIRFLOW_VERSION=2.7.0
-CONSTRAINT_URL=/data/airflow/constraints-3.10.txt
+AIRFLOW_EXTRAS=celery,postgres,google,slack,ftp,http
+AIRFLOW_VENV=~/venvs/airflow_2_7_2
+AIRFLOW_HOME=~/venvs/airflow_2_7_2/airflow
+ENV_FILE=~/venvs/airflow_2_7_2/airflow/airflow.env
+INPUT_ENV_FILE=~/venvs/airflow_2_7_0/airflow/airflow.env
+DAGS_FOLDER=~/venvs/airflow_2_7_2/airflow/dags
+AIRFLOW_VERSION=2.7.2
+# CONSTRAINT_URL=~/constraints-3.10.txt
 # PostgrSQL parameters
 PG_HOST_ADDRESS=localhost
 PG_ADMIN=postgres
