resolve some bugs #1

--- a/utils/airflow_setup.ini
+++ b/utils/airflow_setup.ini
@@ -1,26 +1,26 @@
-USE_PROXY=False
-DEPLOYMENT=DEV
+# DEPLOYMENT=DEV
 # Backup options
 UPGRADE=False
-BACKUP_PATH=~/airflow_backup
-OLD_AIRFLOW_VENV=~/venvs/airflow_2_7_0
-OLD_AIRFLOW_HOME=~/venvs/airflow_2_7_0/airflow
-OLD_ENV_FILE=~/venvs/airflow_2_7_0/airflow/airflow.env
+BACKUP_PATH=/home/airflow/airflow_backup
+OLD_AIRFLOW_VENV=/home/airflow/venvs/airflow_2_7_0
+OLD_AIRFLOW_HOME=/home/airflow/venvs/airflow_2_7_0/airflow
+OLD_ENV_FILE=/home/airflow/venvs/airflow_2_7_0/airflow/airflow.env
 OLD_PG_DATABASE=airflow
 # Airflow parameters
 AIRFLOW_EXTRAS=celery,postgres,google,slack,ftp,http
-AIRFLOW_VENV=~/venvs/airflow_2_7_2
-AIRFLOW_HOME=~/venvs/airflow_2_7_2/airflow
-ENV_FILE=~/venvs/airflow_2_7_2/airflow/airflow.env
-INPUT_ENV_FILE=~/venvs/airflow_2_7_0/airflow/airflow.env
-DAGS_FOLDER=~/venvs/airflow_2_7_2/airflow/dags
-AIRFLOW_VERSION=2.7.2
-# CONSTRAINT_URL=~/constraints-3.10.txt
+AIRFLOW_VENV=/home/airflow/venvs/airflow_2_7_3
+AIRFLOW_HOME=/home/airflow/venvs/airflow_2_7_3/airflow
+ENV_FILE=/home/airflow/venvs/airflow_2_7_3/airflow/airflow.env
+INPUT_ENV_FILE=/home/airflow/venvs/airflow_2_7_0/airflow/airflow.env
+DAGS_FOLDER=/home/airflow/venvs/airflow_2_7_3/airflow/dags
+AIRFLOW_VERSION=2.7.3
+# CONSTRAINT_URL=/home/airflow/constraints-3.10.txt
 # PostgrSQL parameters
 PG_HOST_ADDRESS=localhost
 PG_ADMIN=postgres
 PG_USERNAME=airflow
 PG_DATABASE=airflow
-WEBSERVER_PORT=8080
+WEBSERVER_PORT=8081
 # Proxy parameters
+USE_PROXY=False
 PROXY_URL=proxy.example.com
