--- a/.github/workflows/new_release.yml
+++ b/.github/workflows/new_release.yml
@@ -19,7 +19,8 @@ jobs:
       - run: echo "This PR's base branch is ${{ github.head_ref }}"
   draft_release_notes:
     needs: if_base_release
-    permissions: write-all
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - uses: bhowell2/github-substring-action@1.0.2
@@ -27,12 +28,14 @@ jobs:
         with:
           value: ${{ github.head_ref }}
           index_of_str: "releases/"
-      - run: gh release create 'v$VERSION' --draft --generate-notes --latest --target main --title 'VFH $VERSION' --repo tahaislam/airflow-mate
+      - run: gh release create 'v'$VERSION --draft --generate-notes --latest --target main --title 'VFH $VERSION' --repo tahaislam/airflow-mate
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VERSION: ${{ steps.get_version.outputs.substring }}
   init_new_dev_release:
     needs: if_base_release
+    permissions:
+      issues: write
     runs-on: ubuntu-latest
     steps:
       - uses: bhowell2/github-substring-action@1.0.2
@@ -43,8 +46,8 @@ jobs:
       - run: |
           gh issue create --title 'Update the version number for the new release' --repo tahaislam/airflow-mate \
           --body 'Please, update the version number (`version`) in docs/source/conf.py to an appropriate value \
-          and `latest_release_tag` to $TAG_NAME. Remember also to create a new milestone for the upcoming release. \
+          and `latest_release_tag` to ${VERSION}. Remember also to create a new milestone for the upcoming release. \
           \n**Created by Github action.**' # --label 'ignore-for-release' --project 'VFH Data Management' \
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG_NAME: ${{ github.event.release.tag_name }}
+          VERSION: ${{ steps.get_version.outputs.substring }}
