--- a/.github/workflows/new_release.yml
+++ b/.github/workflows/new_release.yml
@@ -28,10 +28,9 @@ jobs:
         with:
           value: ${{ github.head_ref }}
           index_of_str: "releases/"
-      - run: gh release create 'v${{ VERSION }}' --draft --generate-notes --latest --target main --title 'VFH $VERSION' --repo tahaislam/airflow-mate
+      - run: gh release create 'v${{ steps.get_version.outputs.substring }}' --draft --generate-notes --latest --target main --title 'VFH $VERSION' --repo tahaislam/airflow-mate
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VERSION: ${{ steps.get_version.outputs.substring }}
   init_new_dev_release:
     needs: if_base_release
     permissions:
@@ -46,8 +45,7 @@ jobs:
       - run: |
           gh issue create --title 'Update the version number for the new release' --repo tahaislam/airflow-mate \
           --body 'Please, update the version number (`version`) in docs/source/conf.py to an appropriate value \
-          and `latest_release_tag` to ${{ VERSION }}. Remember also to create a new milestone for the upcoming release.'
-          # --label 'ignore-for-release' --project 'VFH Data Management' \
+          and `latest_release_tag` to ${{ steps.get_version.outputs.substring }}. Remember also to create a new milestone for the upcoming release.'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VERSION: ${{ steps.get_version.outputs.substring }}
+        
