--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,6 @@
+[project]
+version = "0.1.7"
+latest_release_tag = "0.1.6"
 ###############################################################################
 #                                 SQLFLUFF                                    #
 ###############################################################################
