--- a/.github/workflows/new_release.yml
+++ b/.github/workflows/new_release.yml
@@ -30,7 +30,7 @@ jobs:
           value: ${{ github.head_ref }}
           index_of_str: "releases/"
       - id: get_next_version
-        run: echo "version=$(echo ${{ steps.get_current_version.outputs.substring }} | awk -F. -v OFS=. '{$(NF-1) += 1 ; print}')" >> $GITHUB_OUTPUT
+        run: echo "version=$(echo ${{ steps.get_current_version.outputs.substring }} | awk -F. -v OFS=. '{$(NF-1) += 1; $NF = 0; print}')" >> $GITHUB_OUTPUT
   draft_release_notes:
     needs: get_versions
     permissions:
@@ -50,6 +50,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Update pyproject.toml
         run: |
+          git config --global user.email "github-actions@toronto.com"
+          git config --global user.name "github-actions"
           git checkout -b releases/${{ needs.get_versions.outputs.next_version }} main
           sed -i '/^\[project\]$/,/^\[/ s/^version = "${{ needs.get_versions.outputs.version }}"$/version = "${{ needs.get_versions.outputs.next_version }}"/' pyproject.toml
           git add pyproject.toml
