--- a/.github/workflows/new_release.yml
+++ b/.github/workflows/new_release.yml
@@ -45,6 +45,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   update_version:
     needs: get_versions
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -57,6 +59,8 @@ jobs:
           git add pyproject.toml
           git commit -m "update project's version to ${{ needs.get_versions.outputs.next_version }}"
           git push --set-upstream origin releases/${{ needs.get_versions.outputs.next_version }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   create_pr_for_new_release:
     needs: [get_versions, update_version]
     permissions:
