--- a/.github/workflows/new_release.yml
+++ b/.github/workflows/new_release.yml
@@ -61,8 +61,19 @@ jobs:
           git push --set-upstream origin releases/${{ needs.get_versions.outputs.next_version }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  create_pr_for_new_release:
+  create_milestone:
     needs: [get_versions, update_version]
+    permissions:
+      contents: write
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          gh extension install valeriobelli/gh-milestone
+          gh milestone create --title "v${{ needs.get_versions.outputs.next_version }}"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  create_pr_for_new_release:
+    needs: [get_versions, create_milestone]
     permissions:
       pull-requests: write
     runs-on: ubuntu-latest
@@ -70,6 +81,7 @@ jobs:
       - run: |
           gh pr create --base main --head releases/${{ needs.get_versions.outputs.next_version }} \
           --milestone "v${{ needs.get_versions.outputs.next_version }}" \
+          --label "ignore-for-release" \
           --title 'Update the version number for the new release' --repo tahaislam/airflow-mate \
           --body 'Please, update the version number (`version`) in docs/source/conf.py to an appropriate value \
           and `latest_release_tag` to ${{ needs.get_versions.outputs.version }}. Remember also to create a new milestone for the upcoming release.'
