--- a/.github/workflows/new_release.yml
+++ b/.github/workflows/new_release.yml
@@ -67,9 +67,9 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          gh extension install valeriobelli/gh-milestone
-          gh milestone create --title "v${{ needs.get_versions.outputs.next_version }}"
+     uses: "WyriHaximus/github-action-create-milestone@v1"
+        with:
+          title: ${{ needs.get_versions.outputs.next_version }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   create_pr_for_new_release:
