--- a/.github/workflows/new_release.yml
+++ b/.github/workflows/new_release.yml
@@ -68,7 +68,7 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     steps:
-      uses: "WyriHaximus/github-action-create-milestone@v1"
+      - uses: "WyriHaximus/github-action-create-milestone@v1"
         with:
           title: ${{ needs.get_versions.outputs.next_version }}
         env:
