--- a/.github/workflows/new_release.yml
+++ b/.github/workflows/new_release.yml
@@ -70,7 +70,7 @@ jobs:
     steps:
       - uses: "WyriHaximus/github-action-create-milestone@v1"
         with:
-          title: ${{ needs.get_versions.outputs.next_version }}
+          title: v${{ needs.get_versions.outputs.next_version }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   create_pr_for_new_release:
